contour/spin-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spin-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - secretName: spin-https-ingress
    hosts:
      - spin.vrelevant.net
  rules:
  - host: spin.vrelevant.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spind
            port: 
              number: 9000
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: sping
            port: 
              number: 8084
